<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="140dp"
    android:layout_height="190dp"
    android:layout_margin="@dimen/margin_top_8dp"
    android:id="@+id/cv_holder"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/v_card"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            >
            <View
                android:id="@+id/v_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/biru"
                />

            <ImageView
                android:id="@+id/imgDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:src="@drawable/pushup"
                android:contentDescription="@string/todo" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvNameDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_card"
            android:layout_marginStart="@dimen/margin_top_8dp"
            android:layout_marginTop="@dimen/margin_top_8dp"
            android:fontFamily="@font/futura_medium_condensed_t"
            android:text="@string/push_up"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDetailDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNameDetail"
            android:layout_marginStart="@dimen/margin_top_8dp"
            android:layout_marginTop="@dimen/margin_top_4dp"
            android:layout_marginEnd="@dimen/margin_top_8dp"
            android:fontFamily="@font/futura_medium_condensed_t"
            android:maxLines="3"
            android:text="@string/lorem"
            android:textSize="16sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>

